--- a/payment.html
+++ b/payment.html
@@ -177,7 +177,7 @@
                           </div>
                         <div class="form-group">
                           <label for="exampleInputPassword1">Address</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Address">
+                          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Address">
                         </div>
                         <div class="form-group">
                           <label for="exampleInputConfirmPassword1">Land Mark</label>
