--- a/product.html
+++ b/product.html
@@ -153,7 +153,7 @@
                 <div class="left-column">
                   <img data-image="black" src="images/black.png" alt="">
                   <img data-image="blue" src="images/blue.png" alt="">
-                  <img data-image="red" class="active" src="images/14.jpeg" style="height: 500px; width: 400px;" alt="">
+                  <img data-image="red" class="active" src="https://i.ibb.co/Jp8RYjK/14.jpg" style="height: 500px; width: 400px;" alt="">
                 </div>
                
                
