--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                         </div>
                         <div class="tileContainer1">
                             <div class="tileComponent11">
-                                <img src="https://i.ibb.co/2k70vkR/15.jp" style="height:180px;width:100%"/>
+                                <img src="https://i.ibb.co/2k70vkR/15.jpg" style="height:180px;width:100%"/>
                             </div>
                             <div class="tileComponent22">
                                 <div class="componentHeading1">
